name:                qwu
version:             0.1.0.0
synopsis:            Twitter clone
description:         Please see README.md
homepage:            http://github.com/bryangarza/qwu
license:             BSD3
license-file:        LICENSE
author:              Bryan Garza
maintainer:          brygarza@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable qwu
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , data-default
                     , opaleye
                     , product-profunctors
                     , qwu
                     , text
                     , time
                     , uuid
                     , uuid-aeson
  default-language:    Haskell2010

test-suite qwu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , qwu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bryangarza/qwu
