name:                qwu
version:             0.1.0.0
synopsis:            Twitter clone
description:         Please see README.org
homepage:            http://github.com/bryangarza/qwu
license:             MIT
license-file:        LICENSE
author:              Bryan Garza
maintainer:          brygarza@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:     Qwu.Api.Server
                       Qwu.DB.Connect
                       Qwu.DB.Manipulation
                       Qwu.DB.Query
                       Qwu.DB.Test
                       Qwu.DB.Util
                       Qwu.DB.Table.Account
                       Qwu.DB.Table.Post
                       Qwu.Html.Base
                       Qwu.Html.NewPost
                       Qwu.Html.Post
  build-depends:       base
                     , aeson
                     , bytestring
                     , data-default
                     , either
                     , lucid
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , product-profunctors
                     , pwstore-fast
                     , servant
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , uuid
                     , uuid-aeson
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable qwu
  hs-source-dirs:      src/main
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , data-default
                     , either
                     , lucid
                     , mtl
                     , opaleye
                     , postgresql-simple
                     , product-profunctors
                     , pwstore-fast
                     , qwu
                     , servant
                     , servant-lucid
                     , servant-server
                     , text
                     , time
                     , uuid
                     , uuid-aeson
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite qwu-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , qwu
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bryangarza/qwu
